# oop-lab05

./: CMakeLists.txt
build-ps/: CMakeCache.txt
include/: fixed_block_resource.hpp  pmr_stack.hpp
src/: fixed_block_resource.cpp  main.cpp
test/: tests.cpp
